# easy-ci

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  install.sh  uninstall.sh
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: progress.md  task-1.1-brief.md
crates/eci-cli/: Cargo.toml
crates/eci-cli/src/: main.rs
crates/eci-core/: Cargo.toml
crates/eci-core/src/: config.rs  error.rs  lib.rs  state.rs  types.rs
crates/eci-db/: Cargo.toml
crates/eci-db/src/: lib.rs
crates/eci-deploy/: Cargo.toml
crates/eci-deploy/src/: lib.rs
crates/eci-docker/: Cargo.toml
crates/eci-docker/src/: lib.rs
crates/eci-github/: Cargo.toml
crates/eci-github/src/: lib.rs
crates/eci-tui/: Cargo.toml
crates/eci-tui/src/: app.rs  lib.rs  ui.rs
crates/eci-webhook/: Cargo.toml
crates/eci-webhook/src/: lib.rs
docs/superpowers/plans/: 2026-07-15-easy-ci-implementation.md
npm/: index.js  index.test.js  package.json
