[package]
name = "eci-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "eci"
path = "src/main.rs"

[dependencies]
eci-core = { path = "../eci-core" }
eci-github = { path = "../eci-github" }
eci-docker = { path = "../eci-docker" }
eci-db = { path = "../eci-db" }
eci-deploy = { path = "../eci-deploy" }
eci-webhook = { path = "../eci-webhook" }
eci-tui = { path = "../eci-tui" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dialoguer = { version = "0.11", features = ["password"] }
colored = "2"
