[package]
name = "eci"
version = "0.1.0"
edition = "2021"
description = "Internal deployment CLI — deploy Docker-based apps from GitHub repos with auto-deploy, rollbacks, and webhooks"
license = "MIT"
repository = "https://github.com/deyoyk/easy-ci"
homepage = "https://github.com/deyoyk/easy-ci"
keywords = ["cli", "deployment", "docker", "ci", "github"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Deyo"]

[[bin]]
name = "eci"
path = "src/main.rs"

[dependencies]
eci-core = { path = "../eci-core" }
eci-github = { path = "../eci-github" }
eci-docker = { path = "../eci-docker" }
eci-db = { path = "../eci-db" }
eci-deploy = { path = "../eci-deploy" }
eci-webhook = { path = "../eci-webhook" }
eci-tui = { path = "../eci-tui" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dialoguer = { version = "0.11", features = ["password"] }
colored = "2"
