[package]
name = "eci-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
dialoguer = { version = "0.11", features = ["password"] }
tracing = { workspace = true }

[dev-dependencies]
serde_json = "1"
