[package]
name = "eci-webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
eci-core = { path = "../eci-core" }
eci-deploy = { path = "../eci-deploy" }
eci-docker = { path = "../eci-docker" }
eci-github = { path = "../eci-github" }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
